Change field formatting Repair broken links

--- a/content/index/changelog/00-whats-new.adoc
+++ b/content/index/changelog/00-whats-new.adoc
@@ -132,10 +132,10 @@
 === 2019-12
 
 .2019-12-12
-- <<PPv2_PaymentMethods, Masterpass with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
-- <<PPv2_PaymentMethods, Skrill Digital Wallet with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
-- <<PPv2_PaymentMethods, Wirecard Voucher with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
-- <<PPv2_PaymentMethods, WeChat QR Pay with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
+- <<PPv2_SupportedPaymentMethods, Masterpass with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
+- <<PPv2_SupportedPaymentMethods, Skrill Digital Wallet with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
+- <<PPv2_SupportedPaymentMethods, Wirecard Voucher with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
+- <<PPv2_SupportedPaymentMethods, WeChat QR Pay with {payment-page-v2-abbr}>> - New payment method available for {payment-page-v2}.
 
 //-
 
