--- a/content/index/integration-guides/ppv2/03-01-02-01-epp-integration-guide.adoc
+++ b/content/index/integration-guides/ppv2/03-01-02-01-epp-integration-guide.adoc
@@ -51,7 +51,7 @@ This is an example of a credit card transaction to show how to process a
 payment with the Embedded Payment Page. +
 For more supported payment methods and payment-method-specific
 integration guides, go to
-<<PPv2_PaymentMethods, Payment Methods with {payment-page-v2-abbr}>>.
+<<PPv2_SupportedPaymentMethods, Payment Methods with {payment-page-v2-abbr}>>.
 
 The payment-processing example is *designed for the testing environment*
 and *does not use real information.*
@@ -133,35 +133,35 @@ include::{root}/samples/json/PaymentPageSolutions_WPP_EPP_IntegrationExampleCrea
 ----
 
 .Field Table
-[%autowidth, cols="1e,2,3,4,5,6"]
+[%autowidth, cols="m,,,,,"]
 |===
 2+| Field (JSON) | Data Type | Required/Optional | Size | Description
 
-|merchant-account-id e|value |String |Required |36 |A unique identifier assigned to every merchant account (by {payment-provider-name}).
+|merchant-account-id m|value |String |Required |36 |A unique identifier assigned to every merchant account (by {payment-provider-name}).
 2+| request-id                | String | Required | 150 | A unique identifier assigned to every request (by merchant). Used when
 searching for or referencing it later. ``{{$guid}}`` serves as a
 placeholder for a random ``request-id``.
 Allowed characters: +
-a - z +
-0 - 9 +
--_
+``a`` - ``z`` +
+``0`` - ``9`` +
+``-`` ``_``
 2+| transaction-type          | String | Required | 36 | The requested transaction type.
-.2+| requested-amount e| value | Numeric | Required | 18 | The full amount that is requested/contested in a transaction. 2 decimal
+.2+| requested-amount m| value | Numeric | Required | 18 | The full amount that is requested/contested in a transaction. 2 decimal
 places allowed. +
 Use ``.`` (decimal point) as the separator.
 | currency | String | Required | 3 | The currency of the requested/contested transaction amount. +
 Format: 3-character abbreviation according to ISO 4217.
-.2+|account holder e|first-name |String |Required |32 |The first name of the account holder.
+.2+|account holder m|first-name |String |Required |32 |The first name of the account holder.
 |last-name |String |Required |32 |The last name of the account holder.
-| payment-method      e| name     | String | Optional | 15 | The name of the payment method used. Set this value to ``creditcard``.
+| payment-method      m| name     | String | Optional | 15 | The name of the payment method used. Set this value to ``creditcard``.
 2+| success-redirect-url         | String | Optional | 256 | The URL to which the consumer is redirected after a successful payment,
 e.g. ``\https://{pp-redirect-url-success}``
 2+| fail-redirect-url            | String | Optional | 256 | The URL to which the consumer is redirected after an unsuccessful payment,
 e.g. ``\https://{pp-redirect-url-error}``
 2+| cancel-redirect-url          | String | Optional | 256 | The URL to which the consumer is redirected after having canceled a payment,
 e.g. ``\https://{pp-redirect-url-cancel}``
-.2+|options e|mode |String |Required |8 |Indicates which mode of payment page is used for the payment. Currently supports ``seamless`` and ``embedded``.
-|frame-ancestor e|String |Required |256 |The URL of the checkout page where the iframe is rendered.
+.2+|options m|mode |String |Required |8 |Indicates which mode of payment page is used for the payment. Currently supports ``seamless`` and ``embedded``.
+|frame-ancestor |String |Required |256 |The URL of the checkout page where the iframe is rendered.
 |===
 
 ====
@@ -181,7 +181,7 @@ Leave out the ``payment-methods`` object from the request. {payment-page-v2-abbr
 grid of all available payment methods (based on your merchant
 configuration).
 
-Alternatively, check out <<PPv2_PaymentMethods, Payment Methods with {payment-page-v2-abbr}>>
+Alternatively, check out <<PPv2_SupportedPaymentMethods, Payment Methods with {payment-page-v2-abbr}>>
 for an overview of all supported payment methods.
 ====
 
@@ -297,7 +297,7 @@ include::{root}/samples/json/PaymentPageSolutions_WPP_EPP_IntegrationExamplePars
 ----
 
 .Field Table
-[%autowidth, cols="1e,2,3,4"]
+[%autowidth, cols="m,,,"]
 |===
 2+| Field (JSON) | Data Type | Description
 
@@ -305,9 +305,9 @@ include::{root}/samples/json/PaymentPageSolutions_WPP_EPP_IntegrationExamplePars
 2+| transaction-id | String |A unique identifier to every transaction (by {payment-provider-name}). Used when searching for or referencing to it later.
 2+|completion-time-stamp |YYYY-MM-DD-Thh:mm:ss |The UTC/ISO time-stamp documents the time & date when the transaction was executed.
 Format: YYYY-MM-DDThh:mm:ss (ISO).
-.2+| card token e| token-id |String |A unique identifier assigned to every card token.
+.2+| card token m| token-id |String |A unique identifier assigned to every card token.
                | masked-account-number | String | This is the masked card account number of the consumer.
-|merchant-account-id e| value | String | A unique identifier assigned to every merchant account (by {payment-provider-name}).
+|merchant-account-id m| value | String | A unique identifier assigned to every merchant account (by {payment-provider-name}).
 2+| transaction-state |String a|The current transaction state. Possible values:
 
 - ``in-progress``
@@ -316,7 +316,7 @@ Format: YYYY-MM-DDThh:mm:ss (ISO).
 
 //-
 Typically, a transaction starts with state ``in-progress`` and finishes with state either ``success`` or ``failed``. This information is returned in the response only.
-|payment-mode e|name |String |The name of the payment method used for the transaction.
+|payment-mode m|name |String |The name of the payment method used for the transaction.
 2+|cancel-redirect-url |String |The URL to which the consumer is redirected after having canceled payment,
 e.g. ``\https://{pp-redirect-url-cancel}``
 2+|success-redirect-url |String |The URL to which the consumer is redirected after successful payment,
@@ -325,20 +325,20 @@ e.g. ``\https://{pp-redirect-url-success}``
 e.g. ``\https://{pp-redirect-url-error}``
 2+|api-id |String |Identifier of the currently used API.
 2+|request-id |String |A unique identifier assigned to every request (by merchant). Used when searching for or referencing it later.
-.2+| requested-amount e|currency |String |The currency of the requested/contested transaction amount.
-                      e|value |Numeric |The full amount that is requested/contested in a transaction.
-.3+|status e|description |String |The description of the transaction status message.
-           e|severity |String a|The definition of the status message.
+.2+| requested-amount m|currency |String |The currency of the requested/contested transaction amount.
+                      m|value |Numeric |The full amount that is requested/contested in a transaction.
+.3+|status m|description |String |The description of the transaction status message.
+           m|severity |String a|The definition of the status message.
            Possible values:
 
            - ``information``
            - ``warning ``
            - ``error``
 
-           e| code |String |Status code of the status message
+           m| code |String |Status code of the status message
 2+| authorization-code |String |Output code for transaction type ``authorization``.
-.2+|account-holder e|first-name |String |The first name of the account holder.
-                   e|last-name |String |The last name of the account holder.
+.2+|account-holder m|first-name |String |The first name of the account holder.
+                   m|last-name |String |The last name of the account holder.
 2+|descriptor |String |Describes the transaction.
 |===
 
@@ -346,5 +346,5 @@ e.g. ``\https://{pp-redirect-url-error}``
 ====
 For more information on redirect URLs, see <<PPSolutions_PPv2_ConfigureRedirects, Configuring Redirects and IPNs for {payment-page-v2-abbr}>>. +
 For response verification examples, see <<PPSolutions_PPv2_PPv2Security, {payment-page-v2-abbr} Security>>. +
-For payment-method-specific requests, head over to the <<PPv2_PaymentMethods, Payment Methods with {payment-page-v2-abbr}>>.
+For payment-method-specific requests, head over to the <<PPv2_SupportedPaymentMethods, Payment Methods with {payment-page-v2-abbr}>>.
 ====
