--- a/content/index/integration-guides/ppv2/03-01-03-01-seamless-integration-guide.adoc
+++ b/content/index/integration-guides/ppv2/03-01-03-01-seamless-integration-guide.adoc
@@ -185,11 +185,12 @@ The ``Authorization`` header needs to be formatted as:
 include::{root}/samples/json/WPP_SeamlessIntegrationExampleInitialRequest_CreateAPaymentSessionInitialRequest.json[]
 ----
 
+[%autowidth, cols="m,,,,,"]
 |===
  2+|Field (JSON) |Data Type |Required/Optional |Size |Description
 
 |merchant-account-id 
-|value 
+m|value 
 |String    
 |Required          
 |36   
@@ -211,8 +212,8 @@ placeholder for a random request-id. Allowed characters: +
 |36   
 |The requested transaction type.
 
-.2+|_requested-amount_ 
-|value    
+.2+|requested-amount
+m|value    
 |Numeric   
 |Required          
 |18   
@@ -227,14 +228,14 @@ Use ``.`` (decimal point) as the separator.
 Format: 3-character abbreviation according to ISO 4217.
 
 |payment-method   
-|name     
+m|name     
 |String    
 |Optional          
 |15   
 |The name of the payment method used. Set this value to ``creditcard``.
 
 |three-d        
-|attempt-tree-d 
+m|attempt-tree-d 
 |Boolean 
 |Conditional   
 |N/A  
@@ -262,7 +263,7 @@ e.g. ``\https://{pp-redirect-url-success}``
 e.g. ``\https://{pp-redirect-url-cancel}``
 
 .2+|options        
-|mode     
+m|mode     
 |String    
 |Required          
 |8    
@@ -534,6 +535,7 @@ include::{root}/samples/json/WPP_SeamlessIntegrationExampleParse_3DS_DecodedPaym
 ----
 
 .Field Table
+[%autowidth, cols="m,,,"]
 |===
 2+|Field (JSON)                               |Data Type  |Description
 
@@ -544,29 +546,29 @@ a| The current transaction state. Possible values:
 - ``success``
 - ``failed``
 
-Typically, a transaction starts with state _in-progress_ and finishes with state either _success_ or _failed_. This information is returned in the response only.
+Typically, a transaction starts with state ``in-progress`` and finishes with state either ``success`` or ``failed``. This information is returned in the response only.
 
 |payment-method 
-|name                      
+m|name                      
 |String  
 |The name of the payment method used for the transaction.
 
 .2+|_three-d_ 
-|cardholder-authentication-status 
+m|cardholder-authentication-status 
 |String  
 |Result of the 3D Secure check.
 
-|attempt-three-d                  
+m|attempt-three-d                  
 |Boolean 
 |Indicates whether the transaction should use the 3-D Secure workflow.
 
 |merchant-account-id 
-|value                   
+m|value                   
 |String  
 |A unique identifier assigned to every merchant account (by {payment-provider-name}).
 
 .2+|_custom-field_ 
-|field-name                  
+m|field-name                  
 |String  
 |Custom field.
 
@@ -584,7 +586,7 @@ Typically, a transaction starts with state _in-progress_ and finishes with state
 Format: YYYY-MM-DDThh:mm:ss (ISO).
 
 .2+|_requested-amount_ 
-|currency                
+m|currency                
 |String  
 |The currency of the requested/contested transaction amount. +
 Format: 3-character abbreviation according to ISO 4217.
@@ -602,7 +604,7 @@ Format: 3-character abbreviation according to ISO 4217.
 |Code indicating Card Verification Value (CVV/CVC) verification results.
 
 .2+|account-holder 
-|first-name                
+m|first-name                
 |String  
 |The first name of the account holder.
 
@@ -611,7 +613,7 @@ Format: 3-character abbreviation according to ISO 4217.
 |The last name of the account holder.
 
 .4+|card       
-|expiration-month              
+m|expiration-month              
 |Numeric 
 |The expiration month of the card used in the transaction.
 
@@ -627,7 +629,7 @@ Format: 3-character abbreviation according to ISO 4217.
 |Boolean 
 |Indicates whether Cardholder card data was stored by the Merchant for future transactions. Maps to the Visa field _Stored Credential_.
 .3+|status     
-|description                   
+m|description                   
 |String  
 |The description of the transaction status message.
 
@@ -648,7 +650,7 @@ a| The definition of the status message. Possible values:
 |The unique identifier of a transaction that is being referenced (sometimes referred to as the "original transaction").
 
 .2+|_parent-transaction-amount_  
-|currency      
+m|currency      
 |String  
 |The currency of the requested/contested transaction amount. +
 Format: 3-character abbreviation according to ISO 4217.
@@ -662,7 +664,7 @@ Format: 3-character abbreviation according to ISO 4217.
 |Description of the transaction for account holder's bank statement purposes.
 
 .2+|card-token  
-|token-id                     
+m|token-id                     
 |String  
 |A unique identifier assigned to every card token.
 
