--- a/content/include/fields/rest_cc/request/req-address.adoc
+++ b/content/include/fields/rest_cc/request/req-address.adoc
@@ -6,11 +6,13 @@
 // tag::three-ds[]
 |street1 
 |M/O
-|String |50 
-a|Line 1 of the street of the consumer’s address.
+|String 
+|50 
+|Line 1 of the street of the consumer’s address.
 
 - Mandatory for billing address.
 - Optional for shipping address.
+
 //-
 
 |street2 
@@ -21,6 +23,7 @@ a|Line 1 of the street of the consumer’s address.
 
 - Optional for billing address and shipping address.
 - *Recommended* for 3D Secure 2 transactions to reduce likelihood of an authentication challenge.
+
 //-
 
 |street3 
@@ -31,6 +34,7 @@ a|Line 1 of the street of the consumer’s address.
 
 - Optional for billing address and shipping address.
 - *Recommended* for 3D Secure 2 transactions to reduce likelihood of an authentication challenge.
+
 //-
 
 |city 
@@ -42,6 +46,7 @@ a|Line 1 of the street of the consumer’s address.
 - Mandatory for billing address in 3D Secure 2 transactions.
 - Optional for shipping address.
 - *Recommended* for shipping address in 3D Secure 2 transactions to reduce likelihood of an authentication challenge.
+
 //-
 
 |country 
@@ -54,6 +59,8 @@ a|Line 1 of the street of the consumer’s address.
 - Optional for shipping address.
 - *Recommended* for shipping address in 3D Secure 2 transactions to reduce likelihood of an authentication challenge.
 
+//-
+
 |postal-code 
 |M/O 
 |String 
@@ -63,6 +70,7 @@ a|Line 1 of the street of the consumer’s address.
 - Mandatory for billing address in 3D Secure 2 transactions.
 - Optional for shipping address.
 - *Recommended* for shipping address in 3D Secure 2 transactions to reduce likelihood of an authentication challenge.
+
 //-
 
 |state 
