--- a/content/include/fields/rest_cc/request/req-card-token.adoc
+++ b/content/include/fields/rest_cc/request/req-card-token.adoc
@@ -13,7 +13,7 @@
 |O 
 |String 
 |36 
-|Identifier used for credit card in external system which is used in mapping to ``token-id``.
+|Identifier used for the credit card in the external system which is used in mapping to ``token-id``.
 
 |token&#8209;id 
 |M/O 
