Add missing points

--- a/content/include/fields/rest_cc/request/req-payment.adoc
+++ b/content/include/fields/rest_cc/request/req-payment.adoc
@@ -124,7 +124,7 @@ Accepted values: ``p2p``, ``md``, ``acc2acc``, ``ccBill`` and ``fd``.
 |O	
 |String
 |256	
-|The URL to which the consumer is redirected after an unsuccessful payment. This is normally a page on the merchant\'s website notifying the consumer of a failed payment, often suggesting the option to try another payment method.
+|The URL to which the consumer is redirected after an unsuccessful payment. This is normally a page on the merchant's website notifying the consumer of a failed payment, often suggesting the option to try another payment method.
 
 |locale 
 |O 
