--- a/content/include/fields/rest_cc/request/req-shipping.adoc
+++ b/content/include/fields/rest_cc/request/req-shipping.adoc
@@ -73,13 +73,17 @@ Mandatory for credit card.
  Use the shipping indicator value that applies most accurately to the shipping method. If the consumer checks out two or more items, use the shipping indicator value for physical goods. If all goods are digital goods, use the shipping indicator value that matches the most expensive item. +
  Accepted values: +
 
-* ``home_delivery``: Ship to consumer's billing address. +
-* ``verified_address_delivery``: Ship to another address known to and verified by the merchant. +
-* ``other_address_delivery``: Ship to an address that differs from the consumer's billing address. +
-* ``store_pick_up``: "Ship to Store" / Pick-up at local store (store address in shipping address fields). +
-* ``digital_goods``: Digital goods (includes online services, electronic gift cards, and redemption codes). +
-* ``digital_tickets``: Travel and event tickets, not shipped. +
-* ``other_verified``: Other (e.g. gaming, digital services, e-media subscriptions)
+- ``home_delivery``: Ship to consumer's billing address. +
+- ``verified_address_delivery``: Ship to another address known to and verified by the merchant. +
+- ``other_address_delivery``: Ship to an address that differs from the consumer's billing address. +
+- ``store_pick_up``: "Ship to Store" / Pick-up at local store (store address in shipping address fields). +
+- ``digital_goods``: Digital goods (includes online services, electronic gift cards, and redemption codes). +
+- ``digital_tickets``: Travel and event tickets, not shipped. +
+- ``other_verified``: Other (e.g. gaming, digital services, e-media subscriptions) +
+- ``own_delivery``: Ship directly to the consumer's shipping address via your own delivery service. +
+- ``registered_box``: Ship to a delivery box where the consumer needs to be registered to pick them up, e.g. DHL Packstation. +
+- ``unregistered_box``: Ship to a delivery box where the consumer does not need to be registered to pick them up, e.g. Itella smartpost, Hermes PaketShop. +
+- ``pick_up_point``: Ship to a manned pick-up point by an external shipping company. External personnel hands over goods to the consumer.
 
 //-
 
