--- a/content/include/fields/api/request/req-card.adoc
+++ b/content/include/fields/api/request/req-card.adoc
@@ -7,7 +7,7 @@
 | M/O
 | String 
 | 36	
-| The embossed or encoded number that identifies the card issuer to which a transaction is to be routed and the account to which it is to be charged unless specific instructions indicate otherwise. In the case of a credit card, this is the primary account number. +
+| The embossed or encoded number that identifies the card issuer to which a transaction is to be routed and the account to which it is to be charged, unless specific instructions indicate otherwise. In the case of a credit card, this is the primary account number. +
 Mandatory for credit card transactions if <<{listname}_Fields_xmlelements_request_cardtoken,``card-token``>> is not used.
 
 | account-type
