Change enumeration sign

--- a/content/include/fields/rest_cc/request/req-shipping.adoc
+++ b/content/include/fields/rest_cc/request/req-shipping.adoc
@@ -73,13 +73,13 @@ Mandatory for credit card.
  Use the shipping indicator value that applies most accurately to the shipping method. If the consumer checks out two or more items, use the shipping indicator value for physical goods. If all goods are digital goods, use the shipping indicator value that matches the most expensive item. +
  Accepted values: +
 
-- ``home_delivery``: Ship to consumer's billing address. +
-- ``verified_address_delivery``: Ship to another address known to and verified by the merchant. +
-- ``other_address_delivery``: Ship to an address that differs from the consumer's billing address. +
-- ``store_pick_up``: "Ship to Store" / Pick-up at local store (store address in shipping address fields). +
-- ``digital_goods``: Digital goods (includes online services, electronic gift cards, and redemption codes). +
-- ``digital_tickets``: Travel and event tickets, not shipped. +
-- ``other_verified``: Other (e.g. gaming, digital services, e-media subscriptions)
+* ``home_delivery``: Ship to consumer's billing address. +
+* ``verified_address_delivery``: Ship to another address known to and verified by the merchant. +
+* ``other_address_delivery``: Ship to an address that differs from the consumer's billing address. +
+* ``store_pick_up``: "Ship to Store" / Pick-up at local store (store address in shipping address fields). +
+* ``digital_goods``: Digital goods (includes online services, electronic gift cards, and redemption codes). +
+* ``digital_tickets``: Travel and event tickets, not shipped. +
+* ``other_verified``: Other (e.g. gaming, digital services, e-media subscriptions)
 
 //-
 
